# structuredmerge-rust

./: .dockerignore  PLAN.md  README.md  mise.toml
.github/workflows/: current.yml
crates/ast-crispr/: Cargo.toml
crates/ast-crispr/src/: lib.rs
crates/ast-merge/: Cargo.toml  README.md
crates/ast-merge-git/: Cargo.toml
crates/ast-merge-git/src/: lib.rs
crates/ast-merge-git/tests/: fixtures.rs
crates/ast-merge-rs/: Cargo.toml
crates/ast-merge-rs/src/: lib.rs
crates/ast-merge/src/: lib.rs
crates/ast-merge/tests/: compact_ruleset.rs  fixtures.rs  nested_execution.rs
crates/ast-template/: Cargo.toml  README.md
crates/ast-template/src/: lib.rs
crates/ast-template/tests/: session.rs
crates/binary-merge/: Cargo.toml  README.md
crates/binary-merge/src/: lib.rs
crates/binary-merge/tests/: fixtures.rs
crates/go-merge/: Cargo.toml  README.md
crates/go-merge/src/: lib.rs
crates/go-merge/tests/: fixtures.rs
crates/json-merge/: Cargo.toml  README.md
crates/json-merge-rs/: Cargo.toml
crates/json-merge-rs/src/: lib.rs
crates/json-merge/src/: lib.rs
crates/json-merge/tests/: fixtures.rs
crates/kettle-rusty/: Cargo.toml  README.md
crates/kettle-rusty/src/: lib.rs
crates/kettle-rusty/tests/: thin_slice.rs
crates/kettle-rusty/tests/fixtures/: thin-slice.json
crates/markdown-merge/: Cargo.toml  README.md
crates/markdown-merge/src/: lib.rs
crates/markdown-merge/tests/: fixtures.rs
crates/pest-toml-merge/: Cargo.toml  README.md
crates/pest-toml-merge/src/: lib.rs
crates/pest-toml-merge/tests/: fixtures.rs
crates/plain-merge/: Cargo.toml  README.md
crates/plain-merge/src/: lib.rs
crates/plain-merge/tests/: fixtures.rs
crates/pulldown-cmark-merge/: Cargo.toml  README.md
crates/pulldown-cmark-merge/src/: lib.rs
crates/pulldown-cmark-merge/tests/: fixtures.rs
crates/ruby-merge/: Cargo.toml  README.md
crates/ruby-merge/src/: lib.rs
crates/ruby-merge/tests/: fixtures.rs
crates/rust-merge/: Cargo.toml  README.md
crates/rust-merge/src/: lib.rs
crates/rust-merge/tests/: fixtures.rs
crates/smorg-rs/: Cargo.toml
crates/smorg-rs/src/: main.rs
crates/text-merge/: Cargo.toml
crates/text-merge-rs/: Cargo.toml
crates/text-merge-rs/src/: lib.rs
crates/text-merge/src/: lib.rs
crates/text-merge/tests/: fixtures.rs
crates/toml-merge/: Cargo.toml  README.md
crates/toml-merge/src/: lib.rs
crates/toml-merge/tests/: fixtures.rs
crates/tree-haver/: Cargo.toml  README.md
crates/tree-haver-rs/: Cargo.toml
crates/tree-haver-rs/src/: lib.rs
crates/tree-haver/src/: lib.rs
crates/tree-haver/tests/: fixtures.rs
crates/typescript-merge/: Cargo.toml  README.md
crates/typescript-merge/src/: lib.rs
crates/typescript-merge/tests/: fixtures.rs
crates/yaml-merge/: Cargo.toml  README.md
crates/yaml-merge/src/: lib.rs
crates/yaml-merge/tests/: fixtures.rs
crates/yaml-serde-merge/: Cargo.toml  README.md
crates/yaml-serde-merge/src/: lib.rs
crates/yaml-serde-merge/tests/: fixtures.rs
crates/zip-merge/: Cargo.toml  README.md
crates/zip-merge/src/: lib.rs
crates/zip-merge/tests/: fixtures.rs
workspace-scripts/: release_rust_crates.rb
