[package]
name = "ast-merge"
version = "0.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
markdown-merge = { path = "../markdown-merge" }
toml-merge = { path = "../toml-merge" }
ruby-merge = { path = "../ruby-merge" }

[lib]
path = "src/lib.rs"
