[package]
name = "ast-merge"
version = "0.1.0"
authors = ["Peter H. Boling"]
edition = "2024"
description = "Core Structured Merge AST, ruleset, planning, and review contracts"
homepage = "https://structuredmerge.org"
repository = "https://github.com/structuredmerge/structuredmerge-rust"
license = "AGPL-3.0-only OR PolyForm-Small-Business-1.0.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-haver = { version = "0.1.0", path = "../tree-haver" }

[dev-dependencies]
markdown-merge = { version = "0.0.0", path = "../markdown-merge" }
toml-merge = { version = "0.0.0", path = "../toml-merge" }
ruby-merge = { version = "0.0.0", path = "../ruby-merge" }

[lib]
path = "src/lib.rs"
