[package]
name = "ast-template"
version = "0.0.0"
edition = "2024"

[dependencies]
ast-merge = { path = "../ast-merge" }
markdown-merge = { path = "../markdown-merge" }
ruby-merge = { path = "../ruby-merge" }
serde = { version = "1.0", features = ["derive"] }
toml-merge = { path = "../toml-merge" }

[dev-dependencies]
serde_json = "1.0"

[lib]
path = "src/lib.rs"
