[package]
name = "ast-template"
version = "0.0.0"
edition = "2024"

[dependencies]
ast-merge = { path = "../ast-merge" }
markdown-merge = { path = "../markdown-merge" }
ruby-merge = { path = "../ruby-merge" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml-merge = { path = "../toml-merge" }

[dev-dependencies]
[lib]
path = "src/lib.rs"
