[package]
name = "ast-template"
version = "0.0.0"
repository = "https://github.com/structuredmerge/structuredmerge-rust"
homepage = "https://structuredmerge.org"
authors = ["Peter H. Boling"]
edition = "2024"
description = "Recipe and template helpers for Structured Merge AST libraries"
license = "AGPL-3.0-only"

[dependencies]
ast-merge = { version = "0.1.0", path = "../ast-merge" }
markdown-merge = { version = "0.0.0", path = "../markdown-merge" }
ruby-merge = { version = "0.0.0", path = "../ruby-merge" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml-merge = { version = "0.0.0", path = "../toml-merge" }

[dev-dependencies]
[lib]
path = "src/lib.rs"
