[package]
name = "structuredmerge-binary-merge"
version = "0.1.0"
authors = ["Peter H. Boling"]
edition = "2024"
description = "Binary preservation planning and diagnostics for Structured Merge"
homepage = "https://structuredmerge.org"
repository = "https://github.com/structuredmerge/structuredmerge-rust"
license = "AGPL-3.0-only"

[dependencies]
ast-merge = { version = "0.1.0", path = "../ast-merge" }
tree-haver = { version = "0.1.0", path = "../tree-haver" }

[dev-dependencies]
serde_json = "1.0"

[lib]
name = "binary_merge"
path = "src/lib.rs"
