[package]
name = "go-merge"
version = "0.0.0"
repository = "https://github.com/structuredmerge/structuredmerge-rust"
homepage = "https://structuredmerge.org"
authors = ["Peter H. Boling"]
edition = "2024"

[dependencies]
ast-merge = { path = "../ast-merge" }
tree-haver = { path = "../tree-haver" }

[dev-dependencies]
serde_json = "1"
