[package]
name = "json-merge"
version = "0.0.0"
repository = "https://github.com/structuredmerge/structuredmerge-rust"
homepage = "https://structuredmerge.org"
authors = ["Peter H. Boling"]
edition = "2024"

[dependencies]
ast-merge = { path = "../ast-merge" }
serde_json = "1.0"
tree-haver = { path = "../tree-haver" }

[lib]
path = "src/lib.rs"
