[package]
name = "json-merge"
version = "0.0.0"
repository = "https://github.com/structuredmerge/structuredmerge-rust"
homepage = "https://structuredmerge.org"
authors = ["Peter H. Boling"]
edition = "2024"

[dependencies]
ast-merge = { path = "../ast-merge" }
serde_json = { version = "1.0", features = ["preserve_order"] }
tree-haver = { path = "../tree-haver" }

[lib]
path = "src/lib.rs"
