[package]
name = "kettle-rusty"
version = "0.0.0"
repository = "https://github.com/structuredmerge/structuredmerge-rust"
homepage = "https://structuredmerge.org"
authors = ["Peter H. Boling"]
edition = "2024"

[dependencies]
ast-merge = { path = "../ast-merge" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

[lib]
path = "src/lib.rs"
