[package]
name = "markdown-merge"
version = "0.2.0"
repository = "https://github.com/structuredmerge/structuredmerge-rust"
homepage = "https://structuredmerge.org"
authors = ["Peter H. Boling"]
edition = "2024"
description = "Markdown merge helpers for Structured Merge"
license = "AGPL-3.0-only OR PolyForm-Small-Business-1.0.0"

[dependencies]
ast-merge = { version = "0.2.0", path = "../ast-merge" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-haver = { version = "0.2.0", path = "../tree-haver" }

[dev-dependencies]
