[package]
name = "pest-toml-merge"
version = "0.0.0"
repository = "https://github.com/structuredmerge/structuredmerge-rust"
homepage = "https://structuredmerge.org"
authors = ["Peter H. Boling"]
edition = "2024"

[dependencies]
ast-merge = { path = "../ast-merge" }
pest = "2.8"
pest_grammars = "2.8.6"
serde_json = "1"
toml-merge = { path = "../toml-merge" }
tree-haver = { path = "../tree-haver" }

[dev-dependencies]
serde_json = "1"
