[package]
name = "pest-toml-merge"
version = "0.0.0"
repository = "https://github.com/structuredmerge/structuredmerge-rust"
homepage = "https://structuredmerge.org"
authors = ["Peter H. Boling"]
edition = "2024"
description = "Pest TOML merge helpers for Structured Merge"
license = "AGPL-3.0-only OR PolyForm-Small-Business-1.0.0"

[dependencies]
ast-merge = { version = "0.1.0", path = "../ast-merge" }
pest = "2.8"
pest_grammars = "2.8.6"
serde_json = "1"
toml-merge = { version = "0.0.0", path = "../toml-merge" }
tree-haver = { version = "0.1.0", path = "../tree-haver" }

[dev-dependencies]
serde_json = "1"
