[package]
name = "plain-merge"
version = "0.2.0"
repository = "https://github.com/structuredmerge/structuredmerge-rust"
homepage = "https://structuredmerge.org"
authors = ["Peter H. Boling"]
edition = "2024"
description = "Plain text merge helpers for Structured Merge"
license = "AGPL-3.0-only OR PolyForm-Small-Business-1.0.0"

[dependencies]
ast-merge = { version = "0.2.0", path = "../ast-merge" }
tree-haver = { version = "0.2.0", path = "../tree-haver" }

[dev-dependencies]
serde_json = "1.0"

[lib]
path = "src/lib.rs"
