[package]
name = "rust-merge"
version = "0.0.0"
repository = "https://github.com/structuredmerge/structuredmerge-rust"
homepage = "https://structuredmerge.org"
authors = ["Peter H. Boling"]
edition = "2024"

[dependencies]
ast-merge = { path = "../ast-merge" }
tree-haver = { path = "../tree-haver" }
syn = { version = "2", features = ["full"] }

[dev-dependencies]
serde_json = "1"
