[package]
name = "toml-merge"
version = "0.0.0"
repository = "https://github.com/structuredmerge/structuredmerge-rust"
homepage = "https://structuredmerge.org"
authors = ["Peter H. Boling"]
edition = "2024"

[dependencies]
ast-merge = { path = "../ast-merge" }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
tree-haver = { path = "../tree-haver" }

[dev-dependencies]
serde_json = "1"
