[package]
name = "structuredmerge-toml-merge"
version = "0.2.0"
repository = "https://github.com/structuredmerge/structuredmerge-rust"
homepage = "https://structuredmerge.org"
authors = ["Peter H. Boling"]
edition = "2024"
description = "TOML merge helpers for Structured Merge"
license = "AGPL-3.0-only OR PolyForm-Small-Business-1.0.0"

[dependencies]
ast-merge = { version = "0.2.0", path = "../ast-merge" }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
tree-haver = { version = "0.2.0", path = "../tree-haver" }

[dev-dependencies]
serde_json = "1"

[lib]
name = "toml_merge"
path = "src/lib.rs"
