[package]
name = "tree-haver"
version = "0.1.0"
authors = ["Peter H. Boling"]
edition = "2024"
description = "Tree substrate and binary location contracts for Structured Merge"
homepage = "https://structuredmerge.org"
repository = "https://github.com/structuredmerge/structuredmerge-rust"
license = "AGPL-3.0-only OR PolyForm-Small-Business-1.0.0"

[dependencies]
tree-sitter-language-pack = "1.6.2"

[dev-dependencies]
serde_json = "1.0"

[lib]
path = "src/lib.rs"
