[package]
name = "yaml-merge"
version = "0.0.0"
edition = "2024"

[dependencies]
ast-merge = { path = "../ast-merge" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tree-haver = { path = "../tree-haver" }
yaml_serde = "0.10.4"

[dev-dependencies]
serde_json = "1"
