[package]
name = "yaml-merge"
version = "0.0.0"
repository = "https://github.com/structuredmerge/structuredmerge-rust"
homepage = "https://structuredmerge.org"
authors = ["Peter H. Boling"]
edition = "2024"
description = "YAML merge helpers for Structured Merge"
license = "AGPL-3.0-only OR PolyForm-Small-Business-1.0.0"

[dependencies]
ast-merge = { version = "0.1.0", path = "../ast-merge" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tree-haver = { version = "0.1.0", path = "../tree-haver" }

[dev-dependencies]
serde_json = "1"
