[package]
name = "yaml-serde-merge"
version = "0.0.0"
repository = "https://github.com/structuredmerge/structuredmerge-rust"
homepage = "https://structuredmerge.org"
authors = ["Peter H. Boling"]
edition = "2024"

[dependencies]
ast-merge = { path = "../ast-merge" }
serde_json = "1"
tree-haver = { path = "../tree-haver" }
yaml-merge = { path = "../yaml-merge" }
yaml_serde = "0.10.4"

[dev-dependencies]
serde_json = "1"
